--- a/index.html
+++ b/index.html
@@ -19,13 +19,8 @@ body {
   background: #000000;
   color: #dadada;
   font-family: 'Ubuntu', sans-serif;
-/*
   background-image: url('//i.imgur.com/sSlcHSM.jpg') !important;background-repeat: no-repeat !important;background-position: 50% 50% !important;background-size: cover !important;background-color: transparent !important;background: inherit;
   background-attachment: fixed !important;
-*/
-  padding: 0px;
-  margin: 0px;
-
 }
 div.mumble {
   position: absolute;
@@ -40,31 +35,34 @@ div.mumble img {
   width: 40px;
 }
 span.mumble {
-  vertical-align: middle;
+ vertical-align: middle;
   width: 240px;
   font-size: 1.0em;
 }
-div.lesscompress {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAACXBIWXMAAAsTAAALEwEAmpwY AAAAB3RJTUUH3wUQFDMPyL6vuAAAABFJREFUCNdjYGBg%2BM%2BABP4DAA8DAf%2BDhMQUAAAAAElF TkSuQmCC');
-  margin: 0px;
-  padding: 0px;
-  z-index: -1;
+	#ScriptButton {
+  background-color: rgba(255,140,0, 0.3);
+	border-radius: 25px;
+	border: 5px solid rgb(255,165,0);
+	padding: 10px;
+	color: rgba(255, 255, 255, 1);
+	font-weight: 900;
+	text-decoration: none;
 }
-table {padding: 50px;}
+#ScriptButton:hover {
+	background-color: rgba(255,215,0, 0.7);
+	border-radius: 25px;
+	padding: 10px;
+}
 </style>
 </head>
 <body>
-<div id="lesscompress" class="lesscompress">&nbsp;</div>
 <center>
 <br><br>
 <table style="width: 100%" cellpadding="20">
 <tr><td align="left">
 <img src="http://i.imgur.com/vUa6ZqF.png">
 <h1>electronoob's evergreen agario team server connection script AND NOW with custom skins!!</h1>
-<img src="http://i.gyazo.com/8662b7aeab73a72607febc5423242686.gif"><br><h3>To get the script, <a target="_blank" href="http://agariomods.com/mods.user.js.html">click here to install</a>.</h3><br>
+<img src="http://i.gyazo.com/8662b7aeab73a72607febc5423242686.gif"><br><br><h3><a id="ScriptButton" target="_blank" href="http://agariomods.com/mods.user.js.html">CLICK HERE TO INSTALL THE SCRIPT!</a></h3><br>
 <small>To run this script you require either tampermonkey or greasemonkey installed 
 in your browser first.</small><br>
 <small>This is an evergreen script, as in, it automatically updates when changes are available so once installed doesn't need reinstalling ever. :)</small>
